--- a/src/page-transfer.html
+++ b/src/page-transfer.html
@@ -25,19 +25,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
      }
      .flexleft {
        @apply(--layout-vertical);
-       @apply(--layout-flex-3);
-       width:300px;
+       width:400px;
        #background-color:mediumvioletred;
      }
      .flexright {
        @apply(--layout-vertical);
-       @apply(--layout-flex-2);
-       width:200px;
+       width:500px;
        padding-left: 40px;
+       margin-left: 100px;
        #background-color:#b0e0e6;
      }
-     .flexleft .line {
-       @apply(--layout-flex);
+     .flexright > .hr {
+       width: 350px;
      }
      .fontTitle {
        font-family: Georgia, serif;
@@ -73,6 +72,22 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
        margin-top: 20px;
      }
 
+     paper-dropdown-menu.noLable {
+       --paper-input-container-label: {
+         color: var(--paper-pink-500);
+         font-style: italic;
+         text-align: center;
+         font-weight: bold;
+       };
+       --paper-input-container-input: {
+         color: var(--paper-indigo-500);
+         font-style: normal;
+         font-family: serif;
+         text-transform: uppercase;
+       };
+
+     }
+
     </style>
     <looper-page>
       <simple-toolbar slot="secondary-toolbar" title="Transfer" back-link="#/wallet"></simple-toolbar>
@@ -95,7 +110,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <iron-input bind-value="{{bindValue}}">
               <input value="{{value::input}}" class="amount">
             </iron-input>
-            <paper-dropdown-menu label="Tokens">
+            <paper-dropdown-menu class="noLable" label="Tokens" no-label-float>
               <paper-listbox slot="dropdown-content" selected="0">
                 <paper-item>LRC</paper-item>
                 <paper-item>EOS</paper-item>
@@ -126,8 +141,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           </div>
 
           <div class="line">
-            <paper-button>Send Transaction</paper-button>
+            <paper-button>Generate Transaction</paper-button>
           </div>
+
+
 
         </div>
 
@@ -144,7 +161,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <div class="line fontContent">
             0 ETH
           </div>
-          <div class="line">
+          <div class="hr">
             <hr>
           </div>
           <div class="line fontTitle">
