--- a/src/looper-page/looper-page.html
+++ b/src/looper-page/looper-page.html
@@ -2,11 +2,10 @@
 <dom-module id="looper-page">
   <template>
     <style is="custom-style" include="iron-flex iron-flex-alignment"></style>
-    <style>
+    <style include="shared-styles">
      :host {
       display: block;
     }
-
     </style>
     <app-header-layout has-scrolling-region fullbleed>
       <app-header slot="header" fixed condenses effects="waterfall">
