--- a/src/page-wallet-generate.html
+++ b/src/page-wallet-generate.html
@@ -74,6 +74,11 @@
           <paper-button on-click="unlockClicked">Generate</paper-button>
         </div>
       </paper-card>
+          <paper-card transparent>
+        <div class="horiziontal center layout">
+          <!-- <div class="flex"></div> -->
+        </div>
+      </paper-card>
       <paper-card heading="Save Keystore File">
         <div class="card-content">
           <div class="vertical center layout ">
