--- a/src/looper-page/looper-toolbar.html
+++ b/src/looper-page/looper-toolbar.html
@@ -1,8 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 <dom-module id="looper-toolbar" fit>
   <template>
-    <style include="shared-styles"></style>
-    <style>
+    <style include="shared-styles">
      :host {
       display: block;
     }
@@ -24,7 +23,6 @@
       background-color: var(--google-green-700);
     }
 
-    p
     </style>
     <app-toolbar active="[[activeTab]]">
       <paper-icon-button disabled noink></paper-icon-button>
