--- a/src/looper-page/simple-toolbar.html
+++ b/src/looper-page/simple-toolbar.html
@@ -2,8 +2,7 @@
 <!-- <link rel="import" href="../../bower_components/paper-button/paper-button.html"> -->
 <dom-module id="simple-toolbar" fit>
   <template>
-    <style include="shared-styles"></style>
-    <style>
+    <style include="shared-styles">
      :host {
       display: block;
     }
