--- a/src/page-wallet.html
+++ b/src/page-wallet.html
@@ -43,7 +43,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       return {
         subpage: {
           type: String,
-          value: 'generate',
+          value: 'ready',
           observer: '_subpageChanged'
         }
       };
