--- a/src/looper-page/looper-footer.html
+++ b/src/looper-page/looper-footer.html
@@ -31,7 +31,12 @@
     .menus {
       min-width: 1024px;
       padding: 16px 0 32px 0;
-      border-top: 1px dashed rgba(0, 0, 0, .1);
+      /*border-top: 1px dashed rgba(0, 0, 0, .1);*/
+    }
+
+    .menus > div {
+      padding-left: 8px;
+      border-left: solid 4px rgba(0, 0, 0, .05);
     }
 
     .menus a {
@@ -46,6 +51,7 @@
     .copyright {
       color: rgba(0, 0, 0, .54);
       padding-bottom: 0;
+      font-size: 12px;
     }
     </style>
     <!-- <div class="social-logo">
@@ -84,9 +90,8 @@
       <div class="horizontal layout justified menus">
         <div class="vertical start layout">
           <div><a>Loopring Foundation</a></div>
+          <div><a href="https://github.com/Loopring/whitepaper/raw/master/en_whitepaper.pdf">Whitepaper</a></div>
           <div><a>Knowledge Base</a></div>
-          <div><a>Disclaimer</a></div>
-          <div><a>Donation</a></div>
         </div>
         <div class="vertical start layout">
           <div><a>LRC Smart Contract</a></div>
@@ -96,15 +101,14 @@
         </div>
         <div class="vertical start layout">
           <div><a>Fellowship of the Ring (FoR)</a></div>
-          <div></div>
-          <div></div>
+          <div><a>Donation</a></div>
+          <div><a>Disclaimer</a></div>
         </div>
-        <div class="vertical start layout">
-          <div><a href="https://github.com/Loopring/whitepaper/raw/master/en_whitepaper.pdf">Loopring Whitepaper</a></div>
+<!--         <div class="vertical start layout">
           <div> </div>
           <div></div>
         </div>
-      </div>
+ -->      </div>
       <div class="copyright">
         ®Loopring Project Ltd.(Loopring Foundation), All Right Reserved.
       </div>
