fix paper-card border issue

--- a/src/page-wallet-default.html
+++ b/src/page-wallet-default.html
@@ -40,7 +40,7 @@
           <paper-button on-click="generateClicked">Generate Ethereum Wallet</paper-button>
         </div>
       </paper-card>
-      <paper-card transparent>
+      <paper-card transparent elevation=0>
         <div class="horiziontal center layout">
           <div class="flex or">or</div>
         </div>
