--- a/src/page-wallet-generate.html
+++ b/src/page-wallet-generate.html
@@ -74,7 +74,7 @@
           <paper-button on-click="unlockClicked">Generate</paper-button>
         </div>
       </paper-card>
-          <paper-card transparent>
+          <paper-card transparent elevation=0>
         <div class="horiziontal center layout">
           <!-- <div class="flex"></div> -->
         </div>
@@ -100,7 +100,7 @@
           <paper-button id="proceedButton" on-click="proceedClicked">I saved my keystore file. Proceed to unlock my wallet.</paper-button>
         </div>
       </paper-card>
-      <!--       <paper-card transparent>
+      <!--       <paper-card transparent elevation=0>
         <div class="horiziontal center layout">
           <div class="flex or">Generate Ethereum Wallet</div>
         </div>
