--- a/src/page-wallet-ready.html
+++ b/src/page-wallet-ready.html
@@ -46,7 +46,7 @@
     }
     </style>
     <div class="sections">
-      <paper-card transparent>
+      <paper-card transparent elevation=0 elevation=0>
         <div class="wallet-summary vertical center layout">
           <div class="horizontal layout">
             <!-- <div class="head">Address:</div> -->
