--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -71,6 +71,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
 
 
+    iron-input input {
+      height: 36px;
+    }
+
     paper-icon-button {
       text-transform: none;
     }
