--- a/src/page-settings.html
+++ b/src/page-settings.html
@@ -27,7 +27,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     }
     </style>
     <looper-page>
-      <app-toolbar>
+
+      <app-toolbar slot="secondary-toolbar">
         <div condensed-title></div>
         Settings
         <div condensed-title></div>
@@ -40,8 +41,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <div class="card-content">
             <a href="#/ring">Link to a Ring</a>
           </div>
+          <div>
+            <paper-button raised on-click="showWarning">show a warning</paper-button>
+          </div>
         </paper-card>
       </div>
+      <looper-footer></looper-footer>
     </looper-page>
   </template>
   <script>
@@ -50,6 +55,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       return 'page-settings';
     }
 
+    showWarning() {
+      var detail = { msg: "this is a warning", category: "warning", closable: true, timeout: 10 }
+      this.dispatchEvent(new CustomEvent('notification', { bubbles: true, composed: true, detail: detail }));
+    }
   }
 
   window.customElements.define(PageSettings.is, PageSettings);
