layout the market page (#15)

--- a/src/page-fill.html
+++ b/src/page-fill.html
@@ -19,17 +19,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <looper-page>
       <simple-toolbar slot="secondary-toolbar" title="Fill" id="[[id]]" back-link="#/fills"></simple-toolbar>
       <div class="sections">
-        <paper-card heading="Card Title">
-          <div class="card-content">Some content</div>
-          <div class="card-actions">
-            <paper-button>Some action</paper-button>
-          </div>
-        </paper-card>
-        <paper-card heading="Card Title">
-          <div class="card-content">Some content</div>
-          <div class="card-actions">
-            <paper-button>Some action</paper-button>
-          </div>
+        <paper-card>
+          <recent-fills></recent-fills>
         </paper-card>
       </div>
     </looper-page>
