--- a/src/page-wallet-generate.html
+++ b/src/page-wallet-generate.html
@@ -36,11 +36,11 @@
     .card-actions paper-button {
       min-width: 360px;
       /*margin:8px 0 8px 0;*/
-      /*color: var(--paper-green-700);*/
+      /*color: var(--google-green-700);*/
     }
 
     .card-actions paper-button:hover {
-      color: var(--paper-green-700);
+      color: var(--google-green-700);
     }
 
     .warning iron-icon {
@@ -58,7 +58,7 @@
     }
 
     strong {
-      color: var(--paper-green-700);
+      color: var(--google-green-700);
       padding-right: 8px;
     }
     </style>
