--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -67,7 +67,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     iron-input input:focus {
       padding-bottom: 0;
-      border-bottom: solid 2px var(--paper-green-500);
+      border-bottom: solid 2px var(--google-green-500);
     }
 
 
