--- a/src/transaction-dialog.html
+++ b/src/transaction-dialog.html
@@ -44,7 +44,7 @@
         </style>
 
 
-        <paper-dialog id="generateTransaction">
+        <paper-dialog id="generateTransaction"> <!-- modal -->
             <h2>Send Transaction</h2>
 
             <div class="container">
