add basic depth chart and candlestick chart (#16)

--- a/src/page-market.html
+++ b/src/page-market.html
@@ -9,6 +9,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
 <link rel="import" href="shared-styles.html">
+<script src="../bower_components/highstock/highstock.js"></script>
+<script src="../bower_components/highcharts/highcharts-more.js"></script>
 <link rel="import" href="market/candlestick-chart.html">
 <link rel="import" href="market/depth-chart.html">
 <link rel="import" href="market/operation-panel.html">
@@ -36,7 +38,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       --paper-tab-content-unselected: {
         /*background-color: transparent;*/
-        color: rgba(0,0,0,.54);
+        color: rgba(0, 0, 0, .54);
       }
     }
 
@@ -94,7 +96,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         id: String,
         chartSelection: {
           type: String,
-          value: "candle"
+          value: "depth"
         },
         dataSelection: {
           type: String,
