--- a/src/page-orders.html
+++ b/src/page-orders.html
@@ -16,12 +16,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
      :host {
       display: block;
     }
+
+    paper-card {
+      padding: 16px
+    }
     </style>
     <looper-page>
       <simple-toolbar slot="secondary-toolbar" title="Orders" back-link="#/markets"></simple-toolbar>
       <div class="sections">
         <paper-card>
-         <recent-orders></recent-orders>
+          <recent-orders></recent-orders>
         </paper-card>
       </div>
     </looper-page>
