--- a/src/page-fills.html
+++ b/src/page-fills.html
@@ -16,6 +16,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
      :host {
       display: block;
     }
+
+    paper-card {
+      padding: 16px
+    }
     </style>
     <looper-page>
       <simple-toolbar slot="secondary-toolbar" title="Fills" back-link="#/markets"></simple-toolbar>
