--- a/src/my-app.html
+++ b/src/my-app.html
@@ -30,6 +30,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
 <link rel="import" href="../bower_components/iron-icon/iron-icon.html">
 <link rel="import" href="../bower_components/iron-autogrow-textarea/iron-autogrow-textarea.html">
+<link rel="import" href="../bower_components/marked-element/marked-element.html">
 <link rel="import" href="../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
 <link rel="import" href="../bower_components/paper-listbox/paper-listbox.html">
 <link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
@@ -65,6 +66,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="lazy-import" href="page-authorize">
 <link rel="lazy-import" href="page-convert">
 <link rel="lazy-import" href="page-settings">
+<link rel="lazy-import" href="page-doc.html">
 <link rel="lazy-import" href="page-404.html">
 <dom-module id="my-app">
   <template>
@@ -159,6 +161,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <page-authorize name="authorize"></page-authorize>
           <page-transfer name="transfer"></page-transfer>
           <page-settings name="settings"></page-settings>
+          <page-doc name="doc" markdown={{pageId}}></page-doc>
           <page-404 name="404"></page-404>
         </iron-pages>
       </app-header-layout>
